--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="https://use.typekit.net/nwp0lmg.css" />
     <link rel="stylesheet" href="/css/helvetica_neue.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@18.6.1/build/css/intlTelInput.css">
 
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg">
@@ -139,7 +140,7 @@
           <picture>
             <source type="image/svg+xml" srcset="/assets/brands/aerovan.svg">
             <source type="image/webp" srcset="/assets/brands/aerovan.webp">
-            <img src="/assets/brands/aerovan.png" width="50px" height="50px" alt="Aerovan" loading="eager" decoding="async">
+            <img src="/assets/brands/aerovan.png" width="120" height="50" alt="Aerovan" loading="eager" decoding="async">
           </picture>
         </li>
 
@@ -219,7 +220,7 @@
           <picture>
             <source type="image/svg+xml" srcset="/assets/brands/figurella.svg">
             <source type="image/webp" srcset="/assets/brands/figurella.webp">
-            <img src="/assets/brands/figurella.png" width="140" height="54" alt="Figurella" loading="lazy" decoding="async">
+            <img src="/assets/brands/figurella.png" width="160" alt="Figurella" loading="lazy" decoding="async">
           </picture>
         </li>
 
