add robots and sitemap

--- a/public/pages/politica-privacidad.html
+++ b/public/pages/politica-privacidad.html
@@ -19,6 +19,19 @@
   <link rel="manifest" href="/site.webmanifest" />
   <meta name="theme-color" content="#000000" />
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "@id": "https://landing.artifices.studio/pages/politica-privacidad#webpage",
+  "url": "https://landing.artifices.studio/pages/politica-privacidad",
+  "name": "Política de Privacidad | Artífices – Creative Studio",
+  "inLanguage": "es",
+  "isPartOf": { "@id": "https://landing.artifices.studio/#org" },
+  "description": "Política de privacidad de Artífices – Creative Studio para el tratamiento de datos personales.",
+  "dateModified": "2025-08-13"
+}
+</script>
   
 </head>
 <body>
