--- a/public/pages/terminos-condiciones.html
+++ b/public/pages/terminos-condiciones.html
@@ -19,6 +19,20 @@
   <link rel="manifest" href="/site.webmanifest" />
   <meta name="theme-color" content="#000000" />
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "@id": "https://landing.artifices.studio/pages/terminos-condiciones#webpage",
+  "url": "https://landing.artifices.studio/pages/terminos-condiciones",
+  "name": "Términos y Condiciones | Artífices – Creative Studio",
+  "inLanguage": "es",
+  "isPartOf": { "@id": "https://landing.artifices.studio/#org" },
+  "description": "Términos y condiciones de uso del sitio y servicios de Artífices – Creative Studio.",
+  "dateModified": "2025-08-13"
+}
+</script>
+
 </head>
 <body>
   <!-- HEADER -->
