--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,92 @@
     <link rel="preconnect" href="https://use.typekit.net" crossorigin>
     <link rel="preconnect" href="https://p.typekit.net" crossorigin>
     <link rel="dns-prefetch" href="//www.googletagmanager.com">
+
+    <!-- Organization (mejorado) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "@id": "https://landing.artifices.studio/#org",
+  "name": "Artífices – Creative Studio",
+  "url": "https://artifices.studio",
+  "logo": {
+    "@type": "ImageObject",
+    "url": "https://landing.artifices.studio/assets/images/logotipoartificesoficial.svg"
+  }
+}
+</script>
+
+<!-- WebPage (landing) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "@id": "https://landing.artifices.studio/#webpage",
+  "url": "https://landing.artifices.studio/",
+  "name": "Diagnóstico de Potencial de Marca | Artífices – Creative Studio",
+  "inLanguage": "es",
+  "isPartOf": { "@id": "https://landing.artifices.studio/#org" },
+  "description": "Reserva un diagnóstico gratuito de 30 minutos para descubrir oportunidades de tu marca y obtener un plan de acción inicial.",
+  "primaryImageOfPage": {
+    "@type": "ImageObject",
+    "url": "https://landing.artifices.studio/assets/images/og/landing-og-1200x630.jpg",
+    "width": 1200,
+    "height": 630
+  },
+  "dateModified": "2025-08-13"
+}
+</script>
+
+<!-- FAQPage (preguntas frecuentes) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "¿En qué consiste el Diagnóstico de Potencial de Marca?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Es una llamada estratégica de 30 minutos donde analizamos tu negocio y detectamos oportunidades para mejorar la percepción y el desempeño de tu marca."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "¿Tiene costo el diagnóstico?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "No. Es totalmente gratuito y sin compromiso."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "¿Qué obtengo al finalizar la sesión?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Recibirás claridad sobre las principales brechas de tu marca y un plan de acción inicial con pasos concretos."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "¿Con quién es la reunión?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Con un estratega senior de Artífices – Creative Studio. Usamos un método propio para alinear equipo, propuesta de valor y comunicación."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "¿Trabajan con empresas fuera de Chile?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Sí. Atendemos marcas dentro y fuera de Chile. La sesión se agenda en zona horaria conveniente y se realiza online."
+      }
+    }
+  ]
+}
+</script>
 </head>
 
 
